Sun Oct 19 10:04:04 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize.rb: Importing from
	  https://github.com/duerst/eprun/blob/master/lib/string_normalize.rb.
	  (removing trailing whitespace, fixing EOLs and adding EOL property)

Sun Oct 19 09:56:56 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb: Changed module name.

Sun Oct 19 09:48:48 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: Changed module name,
	  adjusted copyright.

Sun Oct 19 09:38:38 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: Importing from
	  https://github.com/duerst/eprun/blob/master/lib/normalize.rb.

Sat Oct 18 20:40:52 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h, proc.c, vm_backtrace.c, vm_trace.c:
	  remove rb_binding_new_with_cfp, and use rb_vm_make_binding instead.

Sat Oct 18 20:38:48 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h, vm.c, proc.c: fix GC mark miss on bindings.
	  [ruby-dev:48616] [Bug #10368]

	* test/ruby/test_eval.rb: add a test code.

Fri Oct 17 22:47:11 2014  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_unpack): Add casts for char references for 'u'.
	  Fix line ending recognition algorithm.

Fri Oct 17 21:49:52 2014  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_unpack): Add casts for char references for 'b' and 'h'.

Fri Oct 17 17:50:10 2014  Tanaka Akira  <akr@fsij.org>

	* Avoid undefined behaviors found by gcc -fsanitize=undefined.
	  gcc (Debian 4.9.1-16) 4.9.1

	* string.c (rb_str_sum): Avoid undefined behavior.

Fri Oct 17 17:43:50 2014  Tanaka Akira  <akr@fsij.org>

	* Avoid undefined behaviors found by gcc -fsanitize=undefined.
	  gcc (Debian 4.9.1-16) 4.9.1

	* include/ruby/ruby.h (INT2FIX): Avoid undefined behavior.

	* node.h (nd_set_line): Ditto.

	* pack.c (encodes): Ditto.
	  (pack_unpack): Ditto.

	* regint.h (BIT_STATUS_AT): Ditto.
	  (BS_BIT): Ditto.

	* time.c (time_mdump): Ditto.