@@ -1,10 +1,8 @@
 ﻿# coding: utf-8
 
-# Copyright 2010-2013 Ayumu Nojima (野島 歩) and Martin J. Dürst (duerst@it.aoyama.ac.jp)
-# available under the same licence as Ruby itself
-# (see http://www.ruby-lang.org/en/LICENSE.txt)
+# Copyright Ayumu Nojima (野島 歩) and Martin J. Dürst (duerst@it.aoyama.ac.jp)
 
-require File.dirname(__FILE__) + '/normalize'
+require 'unicode_normalize/normalize.rb'
 
 class String
   def normalize(form = :nfc)
