@@ -1,3 +1,8 @@
+Sun Oct 19 10:08:08 2014  Martin Duerst <duerst@it.aoyama.ac.jp>
+
+	* lib/unicode_normalize.rb: Changing require statement,
+	  adjusting copyright.
+
 Sun Oct 19 10:04:04 2014  Martin Duerst <duerst@it.aoyama.ac.jp>
 
 	* lib/unicode_normalize.rb: Importing from
